infrastructure/kubernetes/ingress/step1/base/ingress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    linkerd.io/inject: enabled
  name: ingress-nginx
