infrastructure/kubernetes/ingress/step1/base/ingress-nginx-patch-replica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
spec:
  replicas: 2
