infrastructure/kubernetes/ingress/step1/base/ingress-patch-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: fnhs-dev-tracyw
