infrastructure/kubernetes/ingress/step1/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - fnhs-dev-tracyw.westeurope.cloudapp.azure.com
      secretName: fnhs-dev-tracyw
  rules:
    - host: fnhs-dev-tracyw.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world
              servicePort: 3030
